test/should_pass/basic_004.grg
actions basic_004;

rule r {
	pattern {
	}
	modify {
		eval { }
	}
}

