test/should_fail/inh_001.grg
using inh_model_001;

rule bla { pattern {} modify {} }
